--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -54,11 +54,16 @@
         </div>
         <!-- /.user-controls -->
 
-        <div class="header-cart">
+        <!-- <div class="header-cart">
           <span class="cart-qty">3</span>
           <i class="fas fa-shopping-cart icon"></i>
         </div>
-        <!-- /.header-cart -->
+        /.header-cart -->
+
+        <div class="header-counters">
+
+        </div>
+        <!-- /.header-counters -->
       </section>
       <!-- /.header-controls -->
 
@@ -845,7 +850,6 @@
     crossorigin
     src="https://unpkg.com/react@18/umd/react.development.js"
   ></script>
-
   <script
     crossorigin
     src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
