--- a/monochrome/index.html
+++ b/monochrome/index.html
@@ -1144,6 +1144,7 @@
           <form
             action=""
             method="post"
+            class="form-email-newsletter container"
           >
             <label for="email-newsletter">sign up for our newsletter</label>
             <input
@@ -1201,6 +1202,23 @@
     <!-- /.footer-social -->
   </footer>
   <!-- /.footer  -->
+
+
+  <script
+    crossorigin
+    src="https://unpkg.com/react@18/umd/react.development.js"
+  ></script>
+  <script
+    crossorigin
+    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+  ></script>
+
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+  <script
+    src="app.js"
+    type="text/babel"
+  ></script>
 
 </body>
 
