--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -57,8 +57,8 @@
         <!-- <div class="header-cart">
           <span class="cart-qty">3</span>
           <i class="fas fa-shopping-cart icon"></i>
-        </div>
-        /.header-cart -->
+        </div> -->
+        <!-- /.header-cart  -->
 
         <div class="header-counters">
 
